implemented ControlNode to process gear shifter and driving wheel messages and publish cmd_vel values

--- a/teleop_control/CMakeLists.txt
+++ b/teleop_control/CMakeLists.txt
@@ -139,12 +139,12 @@ add_executable(teleop_gear_shifter_device
 target_link_libraries(teleop_gear_shifter_device
    ${catkin_LIBRARIES})
 
-#add_executable(teleop_control
-#    src/teleop_control.cpp
-#    src/teleop_control_main.cpp)
+add_executable(teleop_control
+    src/teleop_control.cpp
+    src/teleop_control_main.cpp)
 
-#target_link_libraries(teleop_control
-#    ${catkin_LIBRARIES})
+target_link_libraries(teleop_control
+    ${catkin_LIBRARIES})
 
 ## Declare a C++ library
 # add_library(${PROJECT_NAME}
