created teleop_flight_stick_device ROS node to publish teleop_control_msgs (TeleopDevice and Gear) when using a Flight Stick (such as a Logitech Extreme 3D Pro), so that the teleop_control ROS node can use it to command a simulated vehicle (such as a simulated Clearpath Robotics Husky)

--- a/teleop_control/CMakeLists.txt
+++ b/teleop_control/CMakeLists.txt
@@ -139,6 +139,15 @@ add_executable(teleop_gear_shifter_device
 target_link_libraries(teleop_gear_shifter_device
    ${catkin_LIBRARIES})
 
+# Flight Stick Device Node
+add_executable(teleop_flight_stick_device
+   src/teleop_flight_stick.cpp
+   src/teleop_flight_stick_main.cpp)
+
+target_link_libraries(teleop_flight_stick_device
+   ${catkin_LIBRARIES})
+
+# Teleop Control Node
 add_executable(teleop_control
     src/teleop_control.cpp
     src/teleop_control_main.cpp)
